# data-veracity

./: .commitlintrc  .editorconfig  .gitignore  Dockerfile  README.markdown  README.md  compose.yml  design-document-template.markdown  package.json  pnpm-lock.yaml  settings.gradle.kts
.github/workflows/: commitlint.yaml
api/: build.gradle.kts
api/spec/: openapi.yaml
app/: build.gradle.kts
buildSrc/: build.gradle.kts
callback-dummy/: Dockerfile  healthcheck.js  index.js  package.json  pnpm-lock.yaml
dashboard-backend/: Dockerfile  package-lock.json  package.json  server.js
docs/: CONTRIBUTING  Data Veracity Assurance BB – Design Document.md  README.md  arch.json  design-document.md  evaluation_api.md  test-definitions.md  usecases.puml
docs/spec/: openapi.yaml
dto/: build.gradle.kts
dva-acapy-controller/: Dockerfile  README.md  pyproject.toml
dva-acapy-controller/src/dva_acapy_controller/: aov.py  config.py  controller.py
dva-acapy-controller/static/: index.html  provider_index.html
dva-acapy-controller/tests/: test_controller.py
dva-api/: .gitignore  Dockerfile  README.md  settings.gradle.kts
dva-api/api/: build.gradle.kts
dva-api/buildSrc/: build.gradle.kts
dva-api/docker/: docker-entrypoint
dva-api/gradle/: libs.versions.toml
dva-api/model/: build.gradle.kts
dva-api/persistence/: build.gradle.kts
dva-dashboard/: .dockerignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
dva-dashboard/backend/: Dockerfile  mock.js  mongo.js  package.json  pnpm-lock.yaml  real.js  server.js
dva-dashboard/frontend/: Dockerfile  README.md  index.html  package.json  (+3 more)
dva-gui/: Dockerfile  package.json
dva-jvm/: Dockerfile  Dockerfile.legacy  settings.gradle.kts
dva-processing/: Dockerfile  README.md  pyproject.toml
dva-processing/src/dva_processing/: config.py  eval.py  http.py  log.py  main.py  model.py  msgconsumer.py  processing.py  qc.py  rmq_consumer.py  serialization.py  util.py
dva-processing/src/dva_processing/engines/: great_expectations.py  jq.py  json_schema.py
dva-processing/tests/: test_eval.py  test_example.py  test_qc.py  test_serialization.py
dva-python/: Dockerfile  Dockerfile.legacy  README.md  pyproject.toml
dva-python/src/consumer_side_controller/: Dockerfile  consumer_controller.py
dva-python/src/consumer_side_controller/static/: index.html
dva-python/src/dva-aca-py/: aca_py_controller.py  aov.py  consumer.Dockerfile  provider.Dockerfile
dva-python/src/dva-aca-py/static/: consumer_index.html
dva-python/src/dva_python/: config.py  dryrun.py  log.py  logging.py  main.py  msgconsumer.py  processing.py  prove.py  qc.py  serialization.py
dva-python/src/infrastructure_side_controller/: Dockerfile  infrastructure_controller.py
dva-python/src/infrastructure_side_controller/static/: index.html
dva-python/src/provider_side_controller/: Dockerfile  aov.py  provider_controller.py  requirements.txt
dva-python/src/provider_side_controller/static/: index.html
dva-python/tests/: test_example.py  test_serialization.py
gradle/: libs.versions.toml
karate-env/: compose.yml
model/: build.gradle.kts
persistence/: build.gradle.kts
processing/: build.gradle.kts
server/: build.gradle.kts
spec/: openapi.yaml
test-data/: aov-request-bad.json  aov-request-good.json
test-env/: .gitignore  README.md  common-services.yml  compose.dev.yml  compose.yml
vla-manager/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
(+439 files in other folders)
