[project]
name = "dva-acapy-controller"
version = "0.1.0"
description = "Data Veracity Assurance ACA-Py Integration"
readme = "README.md"
requires-python = ">=3.10"
authors = [
	{ name = "FTSRG", email = "bpeter@edu.bme.hu" },
	{ name = "Rajmund Szilveszter Hubai", email = "hubai.rajmund@edu.bme.hu" },
]
license = "Apache-2.0"
dependencies = [
	"fastapi~=0.120.0",
	"httpx~=0.28.1",
	"psycopg-pool>=3.2.8",
	"psycopg[binary]>=3.2.13",
	"requests~=2.33.0",
	"uvicorn~=0.34.3",
]

[project.scripts]
dva-acapy-controller = "dva_acapy_controller.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dva_acapy_controller"]

[dependency-groups]
dev = ["pytest>=8.4.1"]
