[project]
name = "dva-python"
version = "0.1.0"
description = "Data Veracity Assurance Python Modules"
readme = "README.md"
authors = [
    { name = "FTSRG", email = "bpeter@edu.bme.hu" }
]
requires-python = ">=3.9"
dependencies = [
    "great-expectations>=1.3.3",
    "jsonschema>=4.23.0",
    "numpy==1.26.4",
    "pika>=1.3.2",
    "requests>=2.32.3",
    "structlog>=25.1.0",
]
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
dva-python = "dva_python.main:main"

[project.optional-dependencies]
logging = [
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dva_python"]
